--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
     "PREFIX": {
       "description": "paste your bot prefix note! Don't apply null prefix.",
       "required": true,
-      "value": "."
+      "value": "$"
     },
     
     "MODE": {
@@ -64,13 +64,13 @@
      "AUTO_STATUS_MSG": {
        "description": "Type custom message on status reply",
        "required": true,
-       "value": "*SEEN YOUR STATUS JUST NOW KERM-MD 🍒*"
+       "value": "*SEEN YOUR STATUS JUST NOW JOSHERM-MD 🍒*"
       },
     
     "AUTO_VOICE": {
       "description": "Make it true if you want bot auto voice.",
       "required": true,
-      "value": "true"
+      "value": "false"
     }, 
 
     "AUTO_REPLY": {
@@ -88,7 +88,7 @@
     "AUTO_READ_STATUS": {
       "description": "Make it true if you want bot auto auto_read_status.",
       "required": true,
-      "value": "true"
+      "value": "false"
     }, 
 
     "ANTI_LINK": {
@@ -100,13 +100,13 @@
     "ANTI_BAD": {
       "description": "Make it true if you want bot auto delete bad words from group example xxx porn etc.",
       "required": true,
-      "value": "false"
+      "value": "true"
     }, 
 
     "FAKE_RECORDING": {
       "description": "Make it true if you want bot fake record.",
-      "required": true,
-      "value": "true"
+      "required": false,
+      "value": "false"
     },
 
     "AUTO_REACT": {
@@ -125,7 +125,7 @@
     "BOT_NAME": {
       "description": "write hear your name.",
       "required": true,
-      "value": "✦『𝗞𝗘𝗥𝗠 𝗠𝗗 𝗩1』✦"
+      "value": "✦『ᴶᴼˢᴴᵁᴬᴹᴬᴹᴮᴼ1』✦"
     }, 
 
     "HEART_REACT": {
